@@ -82,6 +82,7 @@ rm -rf %{buildroot}
 - [BGBUILD-68] Global .boxgrinder/config or rc style file for config
 - [BGBUILD-131] Check if OS is supported before executing the plugin
 - [BGBUILD-93] Add Red Hat Enterprise Linux 6 support
+- [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
 
 * Mon Dec 20 2010  <mgoldman@redhat.com> - 0.0.8-1
 - Upstream release: 0.0.8
